force-app/main/default/objects/Medical_Diagnosis__c/fields/HealthCondition__c.field-meta.xml
<CustomField>
    <fullName>HealthCondition__c</fullName>
    <label>Health Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>