force-app/main/default/objects/Medical_Diagnosis__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (cm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>