force-app/main/default/objects/Medical_Diagnosis__c/fields/HeightPercentileInterpretation__c.field-meta.xml
<CustomField>
    <fullName>HeightPercentileInterpretation__c</fullName>
    <label>Height Percentile Interpretation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>