force-app/main/default/objects/Medical_Diagnosis__c/fields/How_often_do_you_consume_HFD__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_consume_HFD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>How often do you consume HFD?</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Nutrition Histories (How often do you consume HFD?)</relationshipLabel>
    <relationshipName>Nutrition_Histories4</relationshipName>
    <type>Lookup</type>
</CustomField>