force-app/main/default/objects/Medical_Diagnosis__c/fields/HowdidyouknowaboutPediasure__c.field-meta.xml
<CustomField>
    <fullName>HowdidyouknowaboutPediasure__c</fullName>
    <label>How did you know about Pediasure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>醫師/醫院推薦 (備註醫院)</fullName>
            </value>
            <value>
                <fullName>網路索樣</fullName>
            </value>
            <value>
                <fullName>藥局推薦</fullName>
            </value>
            <value>
                <fullName>親友/保姆/同事推薦</fullName>
            </value>
            <value>
                <fullName>電視雜誌廣告</fullName>
            </value>
            <value>
                <fullName>原本就知道這個品牌/ 自己比較</fullName>
            </value>
            <value>
                <fullName>亞培業務介紹</fullName>
            </value>
            <value>
                <fullName>量販賣場/ 通路活動</fullName>
            </value>
            <value>
                <fullName>網路廣告/網路品牌活動</fullName>
            </value>
            <value>
                <fullName>網路口碑</fullName>
            </value>
            <value>
                <fullName>攤位/秀展/ 媽媽教室/ 婦幼展</fullName>
            </value>
            <value>
                <fullName>其他,請說明(備註欄)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>