force-app/main/default/objects/Medical_Diagnosis__c/fields/HowdoesthechildconsumeSimilac__c.field-meta.xml
<CustomField>
    <fullName>HowdoesthechildconsumeSimilac__c</fullName>
    <label>How does child consume Similac?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>單獨使用亞培心美力幼兒配方,</fullName>
            </value>
            <value>
                <fullName>亞培心美力幼兒配方搭配母乳使用,</fullName>
            </value>
            <value>
                <fullName>亞培心美力幼兒配方混合其他嬰兒奶粉使用(請紀錄品牌及混用原因)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>