force-app/main/default/objects/Medical_Diagnosis__c/fields/HowdoesthechildconsumeTotalComfort__c.field-meta.xml
<CustomField>
    <fullName>HowdoesthechildconsumeTotalComfort__c</fullName>
    <label>How does child consume Total Comfort?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>單獨使用親護,</fullName>
            </value>
            <value>
                <fullName>親護搭配母乳使用,</fullName>
            </value>
            <value>
                <fullName>親護混合其他嬰兒奶粉使用(請紀錄品牌及混用原因)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>