force-app/main/default/objects/Medical_Diagnosis__c/fields/HowdoesyourchildconsumePediasure__c.field-meta.xml
<CustomField>
    <fullName>HowdoesyourchildconsumePediasure__c</fullName>
    <label>How does your child consume Pediasure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>單獨沖泡</fullName>
            </value>
            <value>
                <fullName>搭配使用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>