force-app/main/default/objects/Medical_Diagnosis__c/fields/Howlongplantofeedbreastmilktochild__c.field-meta.xml
<CustomField>
    <fullName>Howlongplantofeedbreastmilktochild__c</fullName>
    <label>How long plan to feed breastmilk to chld</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>17</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>18</label>
            </value>
            <value>
                <fullName>19</fullName>
                <isActive>false</isActive>
                <label>19</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20</label>
            </value>
            <value>
                <fullName>21</fullName>
                <isActive>false</isActive>
                <label>21</label>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>22</label>
            </value>
            <value>
                <fullName>23</fullName>
                <isActive>false</isActive>
                <label>23</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>false</isActive>
                <label>24</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>