force-app/main/default/objects/Medical_Diagnosis__c/fields/IntakeFormat__c.field-meta.xml
<CustomField>
    <fullName>IntakeFormat__c</fullName>
    <label>Intake Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ayurvedic</fullName>
            </value>
            <value>
                <fullName>Chyawanprash</fullName>
            </value>
            <value>
                <fullName>Tonic</fullName>
            </value>
            <value>
                <fullName>Tablets</fullName>
            </value>
            <value>
                <fullName>MFD</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>