force-app/main/default/objects/Medical_Diagnosis__c/fields/Interpretation__c.field-meta.xml
<CustomField>
    <fullName>Interpretation__c</fullName>
    <label>Interpretation</label>
    <type>TextArea</type>
</CustomField>