force-app/main/default/objects/Medical_Diagnosis__c/fields/IsthechildcurrentlyusingPediasure__c.field-meta.xml
<CustomField>
    <fullName>IsthechildcurrentlyusingPediasure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the child currently using Pediasure?</label>
    <type>Checkbox</type>
</CustomField>