force-app/main/default/objects/Medical_Diagnosis__c/fields/IsYourChildaPickyEater__c.field-meta.xml
<CustomField>
    <fullName>IsYourChildaPickyEater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Your Child Picky Eater?</label>
    <type>Checkbox</type>
</CustomField>