force-app/main/default/objects/Medical_Diagnosis__c/fields/Lift_shopping_bag_weighing_3_6_4kg__c.field-meta.xml
<CustomField>
    <fullName>Lift_shopping_bag_weighing_3_6_4kg__c</fullName>
    <label>Lift shopping bag weighing 3.6-4kg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, easily</fullName>
            </value>
            <value>
                <fullName>Yes, with some difficulty</fullName>
            </value>
            <value>
                <fullName>Yes, with great difficulty</fullName>
            </value>
            <value>
                <fullName>No, not at all</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>