force-app/main/default/objects/Medical_Diagnosis__c/fields/lossOfStrength__c.field-meta.xml
<CustomField>
    <fullName>lossOfStrength__c</fullName>
    <label>lossOfStrength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>