force-app/main/default/objects/Medical_Diagnosis__c/fields/MC_TH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_TH_Sync_Eligibility__c</fullName>
    <formula>Contact__c != null &amp;&amp; Contact__r.MC_TH_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC TH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>