force-app/main/default/objects/Medical_Diagnosis__c/fields/Medical_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Medical_Diagnosis__c</fullName>
    <label>Medical Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bed Ridden- Old Age</fullName>
            </value>
            <value>
                <fullName>Cancer (All types of Cancer)</fullName>
            </value>
            <value>
                <fullName>Child with Special Needs</fullName>
            </value>
            <value>
                <fullName>Constipation</fullName>
            </value>
            <value>
                <fullName>Crying</fullName>
            </value>
            <value>
                <fullName>C-section</fullName>
            </value>
            <value>
                <fullName>Diarrhea</fullName>
            </value>
            <value>
                <fullName>Eye, Ears, Nose, Throat Condition</fullName>
            </value>
            <value>
                <fullName>Family History of Diabetes</fullName>
            </value>
            <value>
                <fullName>Flatulence</fullName>
            </value>
            <value>
                <fullName>For Normal &amp; healthy person</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal Disease</fullName>
            </value>
            <value>
                <fullName>Geriatric Conditions (Alzheimer/Parkinson Disease)</fullName>
            </value>
            <value>
                <fullName>Gestational diabetes</fullName>
            </value>
            <value>
                <fullName>Haemotological Diseases</fullName>
            </value>
            <value>
                <fullName>Heart Disease</fullName>
            </value>
            <value>
                <fullName>Hypercholesterolemia (High Cholestrol)</fullName>
            </value>
            <value>
                <fullName>Hypertension (High Blood pressure)</fullName>
            </value>
            <value>
                <fullName>Insulin Dependant (Type 1 Diabetes)</fullName>
            </value>
            <value>
                <fullName>Muscle Disease</fullName>
            </value>
            <value>
                <fullName>Muscle Mass Loss</fullName>
            </value>
            <value>
                <fullName>Neurological Disease</fullName>
            </value>
            <value>
                <fullName>Non-Insulin Dependant (Type 2 Diabetes)</fullName>
            </value>
            <value>
                <fullName>Osteopenia</fullName>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
            </value>
            <value>
                <fullName>Post- Surgery</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Renal Disease (CAPD)</fullName>
            </value>
            <value>
                <fullName>Renal Disease (Hemodialysis)</fullName>
            </value>
            <value>
                <fullName>Renal Disease (Pre-Dialysis)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>