force-app/main/default/objects/Medical_Diagnosis__c/fields/MilkFoodDrinkBrand__c.field-meta.xml
<CustomField>
    <fullName>MilkFoodDrinkBrand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milk Food Drink Brand</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Nutrition History</relationshipLabel>
    <relationshipName>Nutrition_History</relationshipName>
    <type>Lookup</type>
</CustomField>