force-app/main/default/objects/Medical_Diagnosis__c/fields/MuscleFatigue__c.field-meta.xml
<CustomField>
    <fullName>MuscleFatigue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muscle Fatigue</label>
    <type>Checkbox</type>
</CustomField>