force-app/main/default/objects/Medical_Diagnosis__c/fields/NutritionSupplements__c.field-meta.xml
<CustomField>
    <fullName>NutritionSupplements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nutrition Supplements</label>
    <type>Checkbox</type>
</CustomField>