force-app/main/default/objects/Medical_Diagnosis__c/fields/Omega3Fats_mg__c.field-meta.xml
<CustomField>
    <fullName>Omega3Fats_mg__c</fullName>
    <label>Omega - 3 Fats (mg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>