force-app/main/default/objects/Medical_Diagnosis__c/fields/OnsetofHungerSugarCraving__c.field-meta.xml
<CustomField>
    <fullName>OnsetofHungerSugarCraving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onset of Hunger/ Sugar Craving</label>
    <type>Checkbox</type>
</CustomField>