force-app/main/default/objects/Medical_Diagnosis__c/fields/OthrchanneltrypurchasngSimilac__c.field-meta.xml
<CustomField>
    <fullName>OthrchanneltrypurchasngSimilac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Othr channel try purchasing Similac</label>
    <type>Checkbox</type>
</CustomField>