force-app/main/default/objects/Medical_Diagnosis__c/fields/OthrchanneltrypurchasngTotalComfort__c.field-meta.xml
<CustomField>
    <fullName>OthrchanneltrypurchasngTotalComfort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Othr channel try purchasing TotalComfort</label>
    <type>Checkbox</type>
</CustomField>