force-app/main/default/objects/Medical_Diagnosis__c/fields/Phosporus_mg__c.field-meta.xml
<CustomField>
    <fullName>Phosporus_mg__c</fullName>
    <label>Phosporus (mg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>