force-app/main/default/objects/Medical_Diagnosis__c/fields/Protein_gm__c.field-meta.xml
<CustomField>
    <fullName>Protein_gm__c</fullName>
    <label>Protein (gm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>