force-app/main/default/objects/Medical_Diagnosis__c/fields/PurchasefromothrchannelTotalComfort__c.field-meta.xml
<CustomField>
    <fullName>PurchasefromothrchannelTotalComfort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase from othr channel(TotalComfort)</label>
    <type>Checkbox</type>
</CustomField>