force-app/main/default/objects/Medical_Diagnosis__c/fields/ReasonstoRecommandorNotRecommand__c.field-meta.xml
<CustomField>
    <fullName>ReasonstoRecommandorNotRecommand__c</fullName>
    <label>Reasons to Recommand or Not Recommand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>最近有施打疫苗</fullName>
            </value>
            <value>
                <fullName>不需要水解奶粉</fullName>
            </value>
            <value>
                <fullName>便祕&amp;排便不順</fullName>
            </value>
            <value>
                <fullName>溢吐奶</fullName>
            </value>
            <value>
                <fullName>階段換奶</fullName>
            </value>
            <value>
                <fullName>皮膚紅疹</fullName>
            </value>
            <value>
                <fullName>腸胃不適</fullName>
            </value>
            <value>
                <fullName>排便次數多</fullName>
            </value>
            <value>
                <fullName>乳糖不耐受</fullName>
            </value>
            <value>
                <fullName>脹氣 腸絞痛</fullName>
            </value>
            <value>
                <fullName>夜晚不明哭鬧</fullName>
            </value>
            <value>
                <fullName>延用上胎品牌</fullName>
            </value>
            <value>
                <fullName>厭奶/奶量不穩定</fullName>
            </value>
            <value>
                <fullName>黃疸/母奶不穩定</fullName>
            </value>
            <value>
                <fullName>過敏/異位性皮膚炎</fullName>
            </value>
            <value>
                <fullName>想換看看/親友推薦</fullName>
            </value>
            <value>
                <fullName>月子中心推廣</fullName>
            </value>
            <value>
                <fullName>無症狀純粹給試用罐</fullName>
            </value>
            <value>
                <fullName>有症狀一次給兩種品牌以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>