force-app/main/default/objects/Medical_Diagnosis__c/fields/Reasonstosaynototheproduct__c.field-meta.xml
<CustomField>
    <fullName>Reasonstosaynototheproduct__c</fullName>
    <label>Reasons to say no to the product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>考慮再觀察</fullName>
            </value>
            <value>
                <fullName>只是想試試</fullName>
            </value>
            <value>
                <fullName>口感(寶寶不喝;口感不適應…)</fullName>
            </value>
            <value>
                <fullName>母乳(母乳很多;改餵母乳)</fullName>
            </value>
            <value>
                <fullName>便性(便祕;腹瀉...)</fullName>
            </value>
            <value>
                <fullName>難溶解</fullName>
            </value>
            <value>
                <fullName>價格考量</fullName>
            </value>
            <value>
                <fullName>原有產品還有再評估&apos;</fullName>
            </value>
            <value>
                <fullName>其他原因(請詳細記錄)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>