force-app/main/default/objects/Medical_Diagnosis__c/fields/Reasonstousewithothercondensedmilk__c.field-meta.xml
<CustomField>
    <fullName>Reasonstousewithothercondensedmilk__c</fullName>
    <label>Reasons to use with other condensed milk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>價格</fullName>
            </value>
            <value>
                <fullName>味道不喜歡</fullName>
            </value>
            <value>
                <fullName>口味太甜</fullName>
            </value>
            <value>
                <fullName>家中還有其他奶粉</fullName>
            </value>
            <value>
                <fullName>醫師建議添加使用</fullName>
            </value>
            <value>
                <fullName>以為是營養補充品</fullName>
            </value>
            <value>
                <fullName>其他，請說明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>