force-app/main/default/objects/Medical_Diagnosis__c/fields/ReasontoaskforSimilac__c.field-meta.xml
<CustomField>
    <fullName>ReasontoaskforSimilac__c</fullName>
    <label>Reason to ask for Similac</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>親友推薦</fullName>
            </value>
            <value>
                <fullName>藥局推薦</fullName>
            </value>
            <value>
                <fullName>延用上胎</fullName>
            </value>
            <value>
                <fullName>網路介紹</fullName>
            </value>
            <value>
                <fullName>醫護推薦(請備註醫院及醫生)</fullName>
            </value>
            <value>
                <fullName>想試試看</fullName>
            </value>
            <value>
                <fullName>試用包包裝外出方便</fullName>
            </value>
            <value>
                <fullName>品牌挑選信任心美力</fullName>
            </value>
            <value>
                <fullName>價格考量</fullName>
            </value>
            <value>
                <fullName>參加亞培網路活動(備註活動名稱)</fullName>
            </value>
            <value>
                <fullName>寶寶沒有消化相關問題, 覺得不需要繼續喝水解, 所以想換</fullName>
            </value>
            <value>
                <fullName>覺得水解營養成分較低, 所以想換</fullName>
            </value>
            <value>
                <fullName>藥師介紹改用經典/舒兒優, 但寶寶喝不習慣</fullName>
            </value>
            <value>
                <fullName>寶寶成長曲線很好無須補充小安素</fullName>
            </value>
            <value>
                <fullName>小安素以外還需要補充一般配方奶</fullName>
            </value>
            <value>
                <fullName>幫他人索取</fullName>
            </value>
            <value>
                <fullName>其他原因(請記錄原因)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>