force-app/main/default/objects/Medical_Diagnosis__c/fields/RecallPediasureadsyouhaveseen__c.field-meta.xml
<CustomField>
    <fullName>RecallPediasureadsyouhaveseen__c</fullName>
    <label>Recall Pediasure ads you have seen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小安素 提供均衡完整營養</fullName>
            </value>
            <value>
                <fullName>小安素 含31種必需營養素</fullName>
            </value>
            <value>
                <fullName>小安素 有新升級配方</fullName>
            </value>
            <value>
                <fullName>小安素含維生素K2、精胺酸</fullName>
            </value>
            <value>
                <fullName>全新小安素 成長加速度</fullName>
            </value>
            <value>
                <fullName>小安素啟動全方位守護</fullName>
            </value>
            <value>
                <fullName>無添加蔗糖 新上市</fullName>
            </value>
            <value>
                <fullName>牛奶口味</fullName>
            </value>
            <value>
                <fullName>其他,請說明(需有備註欄)</fullName>
            </value>
            <value>
                <fullName>小安素 增強保護力</fullName>
                <isActive>false</isActive>
                <label>小安素 增強保護力</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>