force-app/main/default/objects/Medical_Diagnosis__c/fields/Scoopsperserving__c.field-meta.xml
<CustomField>
    <fullName>Scoopsperserving__c</fullName>
    <label>Scoops per serving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>低於1瓶</fullName>
            </value>
            <value>
                <fullName>1瓶</fullName>
            </value>
            <value>
                <fullName>2瓶</fullName>
            </value>
            <value>
                <fullName>3瓶及3瓶以上</fullName>
            </value>
            <value>
                <fullName>1匙以下</fullName>
            </value>
            <value>
                <fullName>1匙</fullName>
            </value>
            <value>
                <fullName>2匙</fullName>
            </value>
            <value>
                <fullName>3匙</fullName>
            </value>
            <value>
                <fullName>4匙</fullName>
            </value>
            <value>
                <fullName>5匙</fullName>
            </value>
            <value>
                <fullName>6匙及6匙以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>