force-app/main/default/objects/Medical_Diagnosis__c/fields/ShoulderBackPain__c.field-meta.xml
<CustomField>
    <fullName>ShoulderBackPain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shoulder/Back Pain</label>
    <type>Checkbox</type>
</CustomField>