force-app/main/default/objects/Medical_Diagnosis__c/fields/Sick_Frequently__c.field-meta.xml
<CustomField>
    <fullName>Sick_Frequently__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sick Frequently</label>
    <type>Checkbox</type>
</CustomField>