force-app/main/default/objects/Medical_Diagnosis__c/fields/Sit_to_Stand_Time__c.field-meta.xml
<CustomField>
    <fullName>Sit_to_Stand_Time__c</fullName>
    <inlineHelpText>Time in seconds</inlineHelpText>
    <label>Sit to Stand Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>