force-app/main/default/objects/Medical_Diagnosis__c/fields/Stand_on_one_leg_for_30_seconds__c.field-meta.xml
<CustomField>
    <fullName>Stand_on_one_leg_for_30_seconds__c</fullName>
    <label>Stand on one leg for 30 seconds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, easily</fullName>
            </value>
            <value>
                <fullName>Yes, with some difficulty</fullName>
            </value>
            <value>
                <fullName>Yes, with great difficulty</fullName>
            </value>
            <value>
                <fullName>No, not at all</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>