force-app/main/default/objects/Medical_Diagnosis__c/fields/Strength_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Strength_Test_Score__c</fullName>
    <label>Strength Test Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>