force-app/main/default/objects/Medical_Diagnosis__c/fields/Strengthscore__c.field-meta.xml
<CustomField>
    <fullName>Strengthscore__c</fullName>
    <label>Strengthscore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>