force-app/main/default/objects/Medical_Diagnosis__c/fields/SuddenTiredness__c.field-meta.xml
<CustomField>
    <fullName>SuddenTiredness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sudden Tiredness</label>
    <type>Checkbox</type>
</CustomField>